<resources>
    <string name="app_name">易罐</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="easy_glide_save_succss">保存图片成功</string>
    <string name="easy_glide_save_failed">保存失败</string>
    <string name="looking_for_car">我要找车</string>
    <string name="subscribe_route">订阅路线</string>
    <string name="new_local_source">本地新货源</string>
    <string name="new_local_source_car">本地新车源</string>
    <string name="look_more">查看更多</string>
    <string name="look_detail">查看详情</string>
    <string name="chemical_news">化工新闻</string>
    <string name="subscribe_goods_route">订阅发货线路、常跑车辆路线</string>
    <string name="subscribe_time_push">订阅实时推送、返程周边一起掌握</string>
    <string name="new_global_local_source">全国货源实时更新、会员精品货源已上线</string>
    <string name="new_global_local_source_car">本地最新货源、周边路线</string>
    <string name="exc_goods_detail_title">抢单详情</string>

    <string name="exc_goods_detail_my">我的报价</string>


    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>

    <string name="publish_goods_title">发布货源</string>
    <string name="publish_car_title">发布车源</string>
    <string name="publish_regular_source">常发货源</string>
    <string name="publish_bulk_source">批量发布货源</string>
    <string name="find_source">我要找货</string>
    <string name="find_car">我要找车</string>

    <string name="add_new_car">添加车辆</string>

    <string name="manage_car">车辆管理</string>
    <string name="streamer_info">蒸罐信息</string>
    <string name="freight_calculation">运费计算</string>

    <string name="publish_protocol">我已阅读并同意《道路运输协议》等协议</string>
    <string name="source_route_add_more_tips">添加长跑路线路，解锁更多货源资源</string>
    <string name="upload_pic_choose_from_pic">从手机相册选择</string>
    <string name="upload_pic_take_photo">拍照</string>

    <string name="profile">我的</string>
    <string name="setting">设置</string>
    <string name="my_head">我的头像</string>
    <string name="done">完成</string>
    <string name="commit">提交</string>
    <string name="login">登录</string>
    <string name="change_password_title">修改密码</string>
</resources>
